--- a/untitled2/CMakeLists.txt
+++ b/untitled2/CMakeLists.txt
@@ -1,13 +1,12 @@
-cmake_minimum_required(VERSION 3.10)
-project(untitled2)
+cmake_minimum_required(VERSION 3.27)
+project(svansslukare_final)
 
 set(CMAKE_CXX_STANDARD 17)
-
 include_directories(inc)
 
-set(SOURCES
-        event.cpp
-        functions.cpp
-        GameFunction.cpp
-        )
-add_executable(untitled2 ${SOURCES} main.cpp)
+add_executable(svansslukare_final src/main.cpp
+        src/ship.cpp
+        src/GameFunction.cpp
+        src/event.cpp
+        src/functions.cpp
+)
